# EnterpriseOptimization

./: .gitignore  CMakeLists.txt  README.md  aboutprogramdialog.cpp  aboutprogramdialog.h  aboutprogramdialog.ui  appsettings.cpp  appsettings.h  dbconnectiondialog.cpp  dbconnectiondialog.h  dbconnectiondialog.ui  dbviewwidget.cpp  dbviewwidget.h  dbviewwidget.ui  helpwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  matrixview.cpp  matrixview.h  optimizationresultsdialog.cpp  optimizationresultsdialog.h  optimizationresultsdialog.ui  program_defs.h  requests.sql  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
locales/: EnterpriseOptimization_ru_RU.ts
mysql_example_database/: database_dump.sql  initial_exec.sql
optmethods/: branchandbound.cpp  branchandbound.h  lsm.cpp  lsm.h  optimizationobjectstorage.cpp  optimizationobjectstorage.h  optimizationthread.cpp  optimizationthread.h  simplex.cpp  simplex.h  truncate.cpp  truncate.h
